[package]
name = "isucari"
version = "0.1.0"
authors = ["ichyo <ichyo00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1"
env_logger = "0.7"
